--- a/historia.html
+++ b/historia.html
@@ -18,16 +18,39 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html" class="enlace">
-                <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" class="logo">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" height="auto" width="100px">
             </a>
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="instrumentos.html">Instrumentos</a></li>
-                <li><a class="active" href="historia.html">Historia</a></li>
-                <li><a href="contactos.html">Contactos</a></li>
-            </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Instrumentos
+                    </a>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Aerofonos</a></li>
+                    <li><a class="dropdown-item" href="#">Cordofonos</a></li>
+                    <li><a class="dropdown-item" href="#">Idiofonos</a></li>
+                    <li><a class="dropdown-item" href="#">Membranofonos</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="historia.html">Historia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contactos.html">Contactanos</a>
+                </li>
+                </ul>
+            </div>
+            </div>
         </nav>
     </header>
     <div class="container">
@@ -589,6 +612,7 @@
                 </div>
         </footer>
 </body>
+<script src="https://kit.fontawesome.com/4edbf8ff12.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
