--- a/historia.html
+++ b/historia.html
@@ -167,8 +167,8 @@
             <h2 class="tilo">Aerófonos</h2>
             <br>
             <div class="row">
-                <div class="col-6">
-                    <img src="img/historia/aerofonos/fcaña.png" alt="">
+                <div id="centro" class="col-md-6">
+                    <img class="res" src="img/historia/aerofonos/fcaña.png" alt="">
                 </div>
                 <div class="col-md-6">
                     <div class="de">
@@ -208,14 +208,14 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-6">
-                    <img src="img/historia/aerofonos/zampoña.png" alt="">
+                <div id="centro" class="col-md-6">
+                    <img class="res" src="img/historia/aerofonos/zampoña.png" alt="">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-6">
-                    <img src="img/historia/aerofonos/antara.png" alt="">
+                <div id="centro" class="col-md-6">
+                    <img class="res" src="img/historia/aerofonos/antara.png" alt="">
                 </div>
                 <div class="col-md-6">
                     <div class="de">
@@ -625,7 +625,6 @@
         </div>
     </footer>
 </body>
-<script src="https://kit.fontawesome.com/4edbf8ff12.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
