--- a/historia.html
+++ b/historia.html
@@ -32,14 +32,14 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="instrumentos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Instrumentos
                     </a>
-                    <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Aerofonos</a></li>
-                    <li><a class="dropdown-item" href="#">Cordofonos</a></li>
-                    <li><a class="dropdown-item" href="#">Idiofonos</a></li>
-                    <li><a class="dropdown-item" href="#">Membranofonos</a></li>
+                    <ul class="dropdown-menu" id="submenu">
+                    <li><a class="dropdown-item text-white" href="instrumentos.html#Aerofnos">Aerofonos</a></li>
+                    <li><a class="dropdown-item text-white" href="instrumentos.html#Cordofonos">Cordofonos</a></li>
+                    <li><a class="dropdown-item text-white" href="instrumentos.hmtl#Idiofonos">Idiofonos</a></li>
+                    <li><a class="dropdown-item text-white" href="instrumentos.html#Membranofos">Membranofonos</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
