--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Instrumentos
                     </a>
-                    <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Aerofonos</a></li>
-                    <li><a class="dropdown-item" href="#">Cordofonos</a></li>
-                    <li><a class="dropdown-item" href="#">Idiofonos</a></li>
-                    <li><a class="dropdown-item" href="#">Membranofonos</a></li>
+                    <ul class="dropdown-menu" id="submenu">
+                    <li><a class="dropdown-item text-white" href="instrumentos.html#Aerofonos">Aerofonos</a></li>
+                    <li><a class="dropdown-item text-white" href="instrumentos.html#Cordofonos">Cordofonos</a></li>
+                    <li><a class="dropdown-item text-white" href="instrumentos.html#Idiofonos">Idiofonos</a></li>
+                    <li><a class="dropdown-item text-white" href="instrumentos.html#Membranofonos">Membranofonos</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
