--- a/instrumentos.html
+++ b/instrumentos.html
@@ -27,17 +27,17 @@
         <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link active dropdown-toggle" href="instrumentos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Instrumentos
                 </a>
-                <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Aerofonos</a></li>
-                <li><a class="dropdown-item" href="#">Cordofonos</a></li>
-                <li><a class="dropdown-item" href="#">Idiofonos</a></li>
-                <li><a class="dropdown-item" href="#">Membranofonos</a></li>
+                <ul class="dropdown-menu" id="submenu">
+                <li><a class="dropdown-item text-white" href="#Aerofonos">Aerofonos</a></li>
+                <li><a class="dropdown-item text-white" href="#Cordofonos">Cordofonos</a></li>
+                <li><a class="dropdown-item text-white" href="#Idiofonos">Idiofonos</a></li>
+                <li><a class="dropdown-item text-white" href="#Membranofonos">Membranofonos</a></li>
                 </ul>
             </li>
             <li class="nav-item">
