--- a/instrumentos.html
+++ b/instrumentos.html
@@ -673,7 +673,7 @@
         </aside>
       </section>
       <hr>
-      <a name="Idiófonos"></a>
+      <a name="Idiofonos"></a>
       <h3 class="tipo">Idiófonos</h3>
       <section class="container-fluid">
         <h5>1.- Matraca</h5>
