--- a/historia.html
+++ b/historia.html
@@ -39,10 +39,10 @@
                                 Instrumentos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Aerofonos</a></li>
-                                <li><a class="dropdown-item" href="#">Cordofonos</a></li>
-                                <li><a class="dropdown-item" href="#">Idiofonos</a></li>
-                                <li><a class="dropdown-item" href="#">Membranofonos</a></li>
+                                <li><a class="dropdown-item text-white" href="instruemntos.html#Aerofonos">Aerofonos</a></li>
+                                <li><a class="dropdown-item text-white" href="instrumentos.html#Cordofonos">Cordofonos</a></li>
+                                <li><a class="dropdown-item text-white" href="instrumentos.html#Idiofonos">Idiofonos</a></li>
+                                <li><a class="dropdown-item text-white" href="instrumentos.html#Membranofonos">Membranofonos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
