--- a/contactos.html
+++ b/contactos.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -44,7 +44,7 @@
                     <a class="nav-link" href="historia.html">Historia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contactos.html">Contactanos</a>
+                    <a class="nav-link active" href="contactos.html">Contactanos</a>
                 </li>
                 </ul>
             </div>
