Ultimo-Cambio-Instrumento

--- a/instrumentos.html
+++ b/instrumentos.html
@@ -430,7 +430,7 @@
         </aside>
       </section>
       <hr>
-      <a name="Cordófonos"></a>
+      <a name="Cordofonos"></a>
       <h3 class="tipo">Cordófonos</h3>
       <section class="container-fluid">
         <h5>1.- Arpa Andina</h5>
