--- a/historia.html
+++ b/historia.html
@@ -38,7 +38,7 @@
                                 aria-expanded="false">
                                 Instrumentos
                             </a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu" id="submenu">
                                 <li><a class="dropdown-item text-white" href="instruemntos.html#Aerofonos">Aerofonos</a></li>
                                 <li><a class="dropdown-item text-white" href="instrumentos.html#Cordofonos">Cordofonos</a></li>
                                 <li><a class="dropdown-item text-white" href="instrumentos.html#Idiofonos">Idiofonos</a></li>
