--- a/historia.html
+++ b/historia.html
@@ -162,7 +162,7 @@
         </div>
         <br>
         <br>
-        <div class="collapse multi-collapse" id="multiCollapseExample1" aria-labelledby="cabecera1"
+        <div class="collapse multi-collapse show" id="multiCollapseExample1" aria-labelledby="cabecera1"
             data-bs-parent="#collap1">
             <h2 class="tilo">Aerófonos</h2>
             <br>
