--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="rs">
             <p class="nr">Nuestras Redes Sociales:</p>
-            <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
+            <a href="https://www.linkedin.com/in/miguel-mq-dv/"><img src="img/iconos/instagram.png" onclick="enviarEvento(event)" alt="instagram/png" class="ico-rs"></a>
             <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
             <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
         </div>
@@ -181,5 +181,19 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+      <script>
+        function enviarEvento(e){
+            e.preventDefault();
+            gtag('event','link',{
+                'debug_mode': true,
+                'event_category': 'rrss',
+                'event_label': 'linkedin'
+            });
+
+            setTimeout(function(){
+                window.location.href = e.target.href;
+            }, 300);
+        }
+      </script>
 </body>
 </html>
