--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="rs">
             <p class="nr">Nuestras Redes Sociales:</p>
-            <a href="https://www.linkedin.com/in/miguel-mq-dv/"><img src="img/iconos/instagram.png" onclick="enviarEvento(event)" alt="instagram/png" class="ico-rs"></a>
+            <a href="http://www.linkedin.com/in/miguel-mq-dv/"><img src="img/iconos/instagram.png" onclick="enviarEvento(event)" alt="instagram/png" class="ico-rs"></a>
             <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
             <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
         </div>
